A few infrastructure fixes
- Added some missing styling on the landing page.

- Fixed extra margin values in the dropdown menu.

- Improved popover positioning on small screens.

--- a/src/sass/misc/_menu.scss
+++ b/src/sass/misc/_menu.scss
@@ -20,6 +20,7 @@
             font-weight: $linkWeight;
             color: $textColor;
             padding: .25rem 1.5rem;
+            margin: 0;
 
             &:hover {
                 color: $textBrandColor;
